# PaPI

./: README.md  SpeechConverter.py  main.py  pyproject.toml  replit_zip_error_log.txt
.upm/: store.json
